# fortytwo

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  fortytwo.cabal  stack.yaml
.github/workflows/: ci.yml
demo/: ConfirmExample.hs  InputExample.hs  Main.hs  MultiselectExample.hs  PasswordExample.hs  SelectExample.hs
examples/: ConfirmExample.hs  InputExample.hs  Main.hs  MultiselectExample.hs  PasswordExample.hs  SelectExample.hs
src/: FortyTwo.hs
src/FortyTwo/: Constants.hs  TheAnswerToEverything.hs  Types.hs  Utils.hs
src/FortyTwo/Prompts/: Confirm.hs  Input.hs  Multiselect.hs  Password.hs  Select.hs
src/FortyTwo/Renderers/: Confirm.hs  Multiselect.hs  Password.hs  Question.hs  Select.hs
test/: Main.hs  Spec.hs  doctests.hs
test/Specs/: Core.hs  Select.hs  Utils.hs
