name:                fortytwo
version:             0.0.0.0
synopsis:            Interactive terminal prompt
homepage:            https://github.com/gianlucaguarini/fortytwo#readme
license:             MIT
license-file:        LICENSE
author:              Gianluca Guarini
maintainer:          gianluca.guarini@gmail.com
copyright:           Gianlua Guarini
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FortyTwo,
                       FortyTwo.Types,
                       FortyTwo.TheAnswerToEverything,
                       FortyTwo.Prompts.Input,
                       FortyTwo.Renderers.Question
  build-depends:       base >= 4.7 && < 5,
                       ansi-terminal >= 0.6.0.0 && <= 0.7.1.1
  default-language:    Haskell2010

executable             examples
  main-is:             Main.hs
  other-modules:       InputExample
  hs-source-dirs:      examples
  build-depends:       base >= 4.7 && < 5,
                       fortytwo
  default-language:    Haskell2010

Test-Suite spec
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           test/Spec.hs
  build-depends:     fortytwo,
                     base >=4.9 && <4.10,
                     process >=1.4 && <1.5,
                     async >=2.1 && <2.2,
                     hspec >= 2.2

Test-Suite doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           test/doctests.hs
  build-depends:     fortytwo,
                     base,
                     doctest >= 0.8.0

source-repository head
  type:     git
  location: https://github.com/gianlucaguarini/fortytwo
